<package>

  <name>velodyne_utils</name>
  <version>0.4.0</version>
  <description>
    ROS tools and utilities metapackage for Velodyne 3D LIDARs.

    This package is deprecated.  Catkin stacks should never use it,
    but rosbuild stacks depending on velodyne_utils will still work in
    Hydro.

    In Indigo, all references must use velodyne_height_map directly.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/velodyne_utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>velodyne_height_map</run_depend>

  <export>
    <metapackage/>
    <architecture-independent/>
    <deprecated>
      This metapackage will be removed in ROS Indigo.  Instead, use
      the velodyne_height_map package directly.
    </deprecated>
  </export>

</package>
